# sdr-bullet

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/sdr-dsp/: Cargo.toml
crates/sdr-dsp/benches/: kernels.rs
crates/sdr-dsp/src/: agc.rs  fft.rs  fir.rs  iq.rs  lib.rs  nco.rs  resample.rs  simd.rs  window.rs
crates/sdr-dsp/src/demod/: am.rs  fm.rs  mod.rs  pll.rs  rds.rs  ssb.rs
crates/sdr-probe/: Cargo.toml
crates/sdr-probe/src/: main.rs  transport.rs
crates/sdr-rtl/: Cargo.toml
crates/sdr-rtl/src/: lib.rs  r82xx.rs  regs.rs  rtl2832.rs  transport.rs
crates/sdr-wasm/: Cargo.toml
crates/sdr-wasm/src/: lib.rs  receiver.rs
docs/: architecture.md  deployment.md  linux-setup.md  register-protocol.md
scripts/: build-wasm.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.worklet.json  vite.config.ts
web/src/: bandplan.ts  constellation2d.ts  demo.ts  main.ts  pipeline.ts  render.ts  scan.ts  scope.ts  styles.css  ui.ts
web/src/audio/: output.ts  sink.worklet.ts
web/src/gpu/: colormap.ts  constellation.ts  device.ts  spectrum.ts  theme.ts  waterfall.ts
web/src/ipc/: iq-ring.ts  ring.ts
web/src/usb/: webusb.ts
web/src/wasm/: load.ts
web/src/workers/: capture.worker.ts  dsp.worker.ts  protocol.ts  spectrum.worker.ts
