[package]
name = "sdr-probe"
description = "Native harness that drives a real dongle over libusb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
futures-lite = "2"
nusb = "0.2"
sdr-dsp.workspace = true
sdr-rtl.workspace = true

[lints.rust]
missing_debug_implementations = "warn"
