[package]
name = "sdr-wasm"
description = "WebAssembly bindings for the receiver pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys.workspace = true
sdr-dsp.workspace = true
sdr-rtl.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[lints.rust]
missing_debug_implementations = "warn"
